# exsearcher

./: .gitignore  CMakeLists.txt  DESIGN.md  README.md  test.exsdb
.github/workflows/: build.yml
app/: DriveChipBar.cpp  DriveChipBar.h  IndexController.cpp  IndexController.h  MainWindow.cpp  MainWindow.h  ResultsModel.cpp  ResultsModel.h  Watcher.cpp  Watcher.h  exsearcher.rc  main.cpp  resources.qrc  style.qss
cli/: main.cpp
core/include/exsearcher/: CrawlIndexer.h  Index.h  SearchEngine.h  Snapshot.h
core/src/: CrawlIndexer.cpp  Index.cpp  SearchEngine.cpp  Snapshot.cpp  WinText.cpp  WinText.h
tools/: make_icon.ps1
